KNOWN BUGS:
* Valgrind-2.1.X will interfere with writeactive, break fchmod. Use 2.0.
* The code sometimes uses timeout_client where it should use a server timeout.
|
Changes since 20050215a:
- Documentation: some parts of README* had been out of date and have
  been revised. Documentation flaws reported by Jens Kutilek.

20050215a: Changes since 20050110a:
- Bugfix: if log_poster_ip is enabled, strip existing
  X-Leafnode-NNTP-Posting-Host headers. Fixes Gnus newsreader warnings
  when superseding.
- Change: in postonly mode, log if there is nothing to post.

20050110a: Changes since 20050105a:
- Cleanup: Only use top-level Makefile.am, drop recursion.
- Bugfix: Make groupexpire = pattern -1 actually work. Bug reported by
  Raymond Scholz
- Bugfix: even if groupexpire is < 0 to mean "no expire", fix overview
  data and check group for consistency.
- Bugfix: do not abort in texpire when DEBUG_EXPIRE is set.

20050105a: Changes since 20050104a:
- Bugfix: delete_article also removes articles from in.coming directory
- Bugfix: store() does not create message.id link unless there was at
  least one valid newsgroup, also avoids writing empty Xref: header that
  confused delete_article()
- Cleanup: the half-working applyfilter -C mode is gone. texpire -C gets
  it right.

20050104a: Changes since 20050103a:
- Feature: texpire can now remove articles from the spool, new -C
  option.

20050103a: Changes since 20050102a:
- Change: obtain LISTGROUP article numbers directly from the directory
  rather than from the overview, to let cancel/supersedes take effect
  before the next texpire run. Suggested by Frank Wein.
- Bugfix: yesterdays' "do not crash if the groupinfo file is empty"
  brought back the malformatted line "#A " bug.

20050102a: Changes since 20041227a:
- Bugfix: fetchnews will only try to obtain low/high marks for a group
  if it matches the only_group_pcre, to avoid wasting time on data that
  is discarded right away.